<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.uhreckysw.balancer.ui.dialog.AddLimitDialog" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/add_limit"
        android:id="@+id/dialog_title"
        style="@style/MyDialogTitle"
        />

    <EditText
        android:id="@+id/item_name"
        style="@style/MyTextField"
        android:layout_marginTop="12dp"
        android:hint="@string/item_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        android:layout_marginTop="8dp"

        android:id="@+id/item_value"
        android:hint="@string/limit"
        android:inputType="numberDecimal"
        style="@style/MyTextField"
        android:text="@={viewmodel.itemValue}"
        />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_value"
        android:layout_marginTop="8dp"

        android:id="@+id/item_days"
        android:hint="@string/duration_days"
        android:inputType="number"
        style="@style/MyTextField"
        android:text="@={viewmodel.itemDays}"
        />



    <Button
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_days"

        android:id="@+id/item_category"
        style="@style/MySelector"
        android:layout_height="match_parent"
        android:stateListAnimator="@null"
        android:onClick="@{(view)->viewmodel.onSelectCategory()}"
        android:text="@{viewmodel.category.replace(`'`,``)}"
        />


    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_category"
        android:layout_marginTop="20dp"

        android:id="@+id/dialog_confirm"
        style="@style/MyDialogButton"
        android:enabled="false"
        android:src="@drawable/ic_dialog_confirm"
        android:onClick="@{(view)->viewmodel.onConfirm()}"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toStartOf="@id/dialog_confirm"
        app:layout_constraintTop_toBottomOf="@id/item_category"
        android:layout_marginTop="20dp"

        android:id="@+id/dialog_cancel"
        style="@style/MyDialogButton"
        android:src="@drawable/ic_dialog_cancel"
        android:onClick="@{(view)->viewmodel.onCancel()}"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>