<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.uhreckysw.balancer.ui.dialog.AddPaymentDialog" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/add_payment"
        android:id="@+id/dialog_title"
        style="@style/MyDialogTitle"
        />

    <EditText
        android:id="@+id/item_name"
        style="@style/MyTextField"
        android:layout_marginTop="12dp"
        android:hint="@string/item_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        android:layout_marginTop="8dp"

        android:id="@+id/item_price"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        style="@style/MyTextField"
        android:text="@={viewmodel.itemPriceFieldText}"
        />

    <EditText
        app:layout_constraintEnd_toStartOf="@id/date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_price"
        android:layout_marginTop="8dp"

        android:id="@+id/item_payed_date"
        android:hint="dd.mm.yyyy"
        android:inputType="date"
        style="@style/MyTextField"
        android:text="@={viewmodel.itemDateFieldText}"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_price"
        app:layout_constraintBottom_toTopOf="@id/add_category"


        android:id="@+id/date_picker"
        style="@style/MyDialogButton"
        android:layout_width="30dp"
        android:src="@drawable/ic_date_range"
        android:onClick="@{(view)->viewmodel.onDatePick()}" />

    <Spinner
        app:layout_constraintEnd_toStartOf="@id/add_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_payed_date"
        android:layout_marginTop="8dp"

        android:id="@+id/item_category"
        style="@style/MySelector"
        />

    <Button
        app:layout_constraintBottom_toBottomOf="@+id/item_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_category"
        app:layout_constraintTop_toTopOf="@+id/item_category"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"


        android:id="@+id/add_category"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:text="+"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="@{(view)->viewmodel.onAddCategory()}"
        />

    <EditText
        android:id="@+id/item_description"
        style="@style/MyTextField"
        android:layout_marginTop="12dp"
        android:hint="@string/description_optional"
        android:lines="3"
        android:maxLines="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:gravity="top|left"
        android:text="@={viewmodel.itemDescriptionFieldText}"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_category" />


    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_description"
        android:layout_marginTop="20dp"

        android:id="@+id/dialog_confirm"
        style="@style/MyDialogButton"
        android:enabled="false"
        android:src="@drawable/ic_dialog_confirm"
        android:onClick="@{(view)->viewmodel.onConfirm()}"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toStartOf="@id/dialog_confirm"
        app:layout_constraintTop_toBottomOf="@id/item_description"
        android:layout_marginTop="20dp"

        android:id="@+id/dialog_cancel"
        style="@style/MyDialogButton"
        android:src="@drawable/ic_dialog_cancel"
        android:onClick="@{(view)->viewmodel.onCancel()}"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>