<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.uhreckysw.balancer.ui.settings_activity.SettingsActivity" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"

        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryDark"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/back_button"
            android:layout_height="match_parent"
            android:layout_width="35dp"

            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:src="@drawable/ic_back_arr"
            android:onClick="@{(view)->viewmodel.onBackPressed()}"
            />
        <TextView
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#FFFFFF"
            android:text="@string/settings"
            android:textSize="20sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/import_module">

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/import_export"
                android:id="@+id/import_title"
                style="@style/MyDialogTitle"
                />
            <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@id/import_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restore_btn"

            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:id="@+id/backup_btn"
            android:background="#F5F5F5"
            android:text="@string/backup"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_save"
            android:drawablePadding="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"

            android:onClick="@{(view)->viewmodel.onBackup()}"
            />
            <androidx.appcompat.widget.AppCompatButton
                app:layout_constraintTop_toBottomOf="@id/import_title"
                app:layout_constraintStart_toEndOf="@id/backup_btn"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:id="@+id/restore_btn"
                android:background="#F5F5F5"
                android:text="@string/restore"
                android:textAlignment="textStart"
                android:drawableStart="@drawable/ic_restore"
                android:drawablePadding="5dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"

                android:onClick="@{(view)->viewmodel.onRestore()}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>