<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.uhreckysw.balancer.ui.dialog.FiltersDialog" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/filter"
        android:id="@+id/dialog_title"
        style="@style/MyDialogTitle"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"

        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:id="@+id/view_date_min"
        >
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:text="@string/from"
            android:textSize="15dp"
            android:id="@+id/caption_date_min"
            android:textColor="@color/colorPrimary"
            />


        <EditText
            app:layout_constraintEnd_toStartOf="@id/from_picker"
            app:layout_constraintStart_toEndOf="@id/caption_date_min"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:id="@+id/value_date_min"
            style="@style/MyTextField"
            android:inputType="date"
            android:text="@={viewmodel.dateMin}"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/from_picker"
            style="@style/MyDialogButton"
            android:layout_width="30dp"
            android:src="@drawable/ic_date_range"
            android:onClick="@{(view)->viewmodel.onFromDatePick()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_date_min"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:id="@+id/view_date_max"
        >
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="@id/value_date_max"
            app:layout_constraintBottom_toBottomOf="@id/value_date_max"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:text="@string/to"
            android:textSize="15dp"
            android:id="@+id/caption_date_max"
            android:textColor="@color/colorPrimary"
            />


        <EditText
            app:layout_constraintEnd_toStartOf="@id/to_picker"
            app:layout_constraintStart_toEndOf="@id/caption_date_max"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:id="@+id/value_date_max"
            android:inputType="date"
            style="@style/MyTextField"
            android:text="@={viewmodel.dateMax}"
           />
        <androidx.appcompat.widget.AppCompatImageButton
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/to_picker"
            style="@style/MyDialogButton"
            android:layout_width="30dp"
            android:src="@drawable/ic_date_range"
            android:onClick="@{(view)->viewmodel.onToDatePick()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_date_max"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/view_category">
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:text="@string/category"
            android:textSize="15dp"
            android:id="@+id/caption_category"
            android:textColor="@color/colorPrimary"
            />
        <Button
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/caption_category"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/item_category"
            style="@style/MySelector"
            android:layout_height="match_parent"
            android:stateListAnimator="@null"
            android:onClick="@{(view)->viewmodel.onSelectCategory()}"
            android:text="@{viewmodel.category.replace(`'`,``)}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_category"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="10dp"

        android:id="@+id/view_price_min"
        >
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="15dp"
            android:id="@+id/caption_price_min"
            android:textColor="@color/colorPrimary"
            />


        <SeekBar
            android:id="@+id/value_price_min"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:max="1000000"

            android:progress="@={viewmodel.priceMin}"
            android:progressTint="@color/colorPrimary"
            android:thumbTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_value_price_min"
            app:layout_constraintStart_toEndOf="@id/caption_price_min"
            app:layout_constraintTop_toTopOf="parent"

            />
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="15dp"
            android:id="@+id/text_value_price_min"
            android:textColor="@color/colorPrimary"
            android:text="@{viewmodel.intToStringConverter(viewmodel.priceMin)}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_price_min"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:id="@+id/view_price_max"
        >
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_width="40dp"
            android:layout_height="wrap_content"

            android:text="@string/max"
            android:textSize="15dp"
            android:id="@+id/caption_price_max"
            android:textColor="@color/colorPrimary"
            />


        <SeekBar
            app:layout_constraintEnd_toStartOf="@id/text_value_price_max"
            app:layout_constraintStart_toEndOf="@id/caption_price_max"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_width="0dp"
            android:layout_height="50dp"

            android:id="@+id/value_price_max"
            android:thumbTint="@color/colorPrimary"
            style="@style/Widget.AppCompat.SeekBar"
            android:progressTint="@color/colorPrimary"
            android:max="1000000"
            android:progress="@={viewmodel.priceMax}"
            />
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="15dp"
            android:id="@+id/text_value_price_max"
            android:textColor="@color/colorPrimary"
            android:text="@{viewmodel.intToStringConverter(viewmodel.priceMax)}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_price_max"
        android:layout_marginTop="20dp"

        android:id="@+id/dialog_confirm"
        style="@style/MyDialogButton"
        android:enabled="false"
        android:src="@drawable/ic_dialog_confirm"
        android:onClick="@{(view)->viewmodel.onConfirm()}"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toStartOf="@id/dialog_confirm"
        app:layout_constraintTop_toTopOf="@id/dialog_confirm"

        android:id="@+id/dialog_cancel"
        style="@style/MyDialogButton"
        android:src="@drawable/ic_dialog_cancel"
        android:onClick="@{(view)->viewmodel.onCancel()}"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        app:layout_constraintEnd_toStartOf="@id/dialog_cancel"
        app:layout_constraintTop_toTopOf="@id/dialog_cancel"

        android:id="@+id/dialog_clear"
        style="@style/MyDialogButton"
        android:src="@drawable/ic_delete_or"
        android:onClick="@{(view)->viewmodel.onClear()}"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>